# BackupSystem

./: .gitignore  CMakeLists.txt  LICENSE  README.md  backup_system_new_rebuild.7z
backup/: CMakeLists.txt  main.cpp
backup/include/: head.hpp
backup/src/: head.cpp  main.cpp
backup_v0.0.1/: log.txt
include/common/: config.hpp  env.hpp  print.hpp  str_encode.hpp
include/core/: ThreadPool.hpp  file_info.hpp  file_info_md5.hpp  thread_pool.hpp
restore/: CMakeLists.txt  main.cpp
restore/include/: head.hpp  str_similarity.hpp
restore/src/: head.cpp  main.cpp  str_similarity.cpp
share/include/: ThreadPool.hpp  config.hpp  env.hpp  file_info.hpp  file_info_md5.hpp  print.hpp  str_encode.hpp
share/src/: ThreadPool.cpp  config.cpp  env.cpp  file_info.cpp  file_info_md5.cpp  print.cpp  str_encode.cpp
src/common/: config.cpp  env.cpp  print.cpp  str_encode.cpp
src/core/: ThreadPool.cpp  file_info.cpp  file_info_md5.cpp  file_info_md5_with_txt_cache.cpp  thread_pool.cpp
test/: CMakeLists.txt  test_file_info_md5.cpp
